@@ -35,13 +35,19 @@
 
 #include <spinner.h>
 
+void (*hook_spinner) (unsigned value);
+
 void spinner_step (void)
 {
   static int step;
-  int v = (timer_delta (0, timer_read ())/128)%8;
   static const unsigned char rgch[]
     = { '|', '/', '-', '\\', '|', '/', '-', '\\' } ;
+  unsigned v = (timer_delta (0, timer_read ())/128)%8;
 
+  if (hook_spinner)
+    hook_spinner (v);
+
+  v = v%8;
   if (v == step)
     return;
   step = v;
