@@ -6,6 +6,21 @@
 
    Copyright (C) 2005 Marc Singer
 
+   This program is free software; you can redistribute it and/or
+   modify it under the terms of the GNU General Public License as
+   published by the Free Software Foundation; either version 2 of the
+   License, or (at your option) any later version.
+
+   This program is distributed in the hope that it will be useful, but
+   WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+   General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with this program; if not, write to the Free Software
+   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+   USA.
+
    -----------
    DESCRIPTION
    -----------
@@ -22,6 +37,29 @@
 /* ----- Globals */
 
 /* ----- Prototypes */
+
+#define LED_MASK (0xf)
+
+#define LED0	((0<<1)|(0<<0)|(1<<2)|(1<<3))
+#define LED1	((1<<1)|(0<<0)|(1<<2)|(1<<3))
+#define LED2	((0<<1)|(1<<0)|(1<<2)|(1<<3))
+#define LED3	((1<<1)|(1<<0)|(1<<2)|(1<<3))
+#define LED4	((0<<1)|(0<<0)|(0<<2)|(1<<3))
+#define LED5	((1<<1)|(0<<0)|(0<<2)|(1<<3))
+#define LED6	((0<<1)|(1<<0)|(0<<2)|(1<<3))
+#define LED7	((1<<1)|(1<<0)|(0<<2)|(1<<3))
+
+#define LED8	((0<<1)|(0<<0)|(1<<2)|(0<<3))
+#define LED9	((1<<1)|(0<<0)|(1<<2)|(0<<3))
+#define LEDa	((0<<1)|(1<<0)|(1<<2)|(0<<3))
+#define LEDb	((1<<1)|(1<<0)|(1<<2)|(0<<3))
+#define LEDc	((0<<1)|(0<<0)|(0<<2)|(0<<3))
+#define LEDd	((1<<1)|(0<<0)|(0<<2)|(0<<3))
+#define LEDe	((0<<1)|(1<<0)|(0<<2)|(0<<3))
+#define LEDf	((1<<1)|(1<<0)|(0<<2)|(0<<3))
+
+#define _L(l) MASK_AND_SET(GPIO_OUTR, LED_MASK, l)
+
 
 #define GPIO_ER_OUTPUTS	 (1<<0)		/* Status LED */\
 			|(1<<1)		/* Ready LED */\
